--- a/code/pixi.toml
+++ b/code/pixi.toml
@@ -15,3 +15,5 @@ numpy = ">=2.2.3, <3"
 jupyter = ">=1.1.1, <2"
 notebook = ">=7.3.2, <8"
 scikit-learn = ">=1.6.1, <2"
+plotly = ">=6.0.0, <7"
+pandas = ">=2.2.3, <3"
